# databased

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
based/: __init__.py  database.py  errors.py
based/backends/: __init__.py  postgres.py  sqlite.py
databased/: __init__.py  database.py  errors.py
databased/backends/: __init__.py  sqlite.py
tests/: conftest.py  test_abstract.py  test_database.py  test_math.py
