[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "databased"
authors = [{name = "ansipunk"}]
description = "A based asynchronous database connection manager."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["database", "sqlalchemy", "sqlite", "asyncio"]
requires-python = ">=3.12,<4"
dynamic = ["version"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Database",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["SQLAlchemy>=2,<2.1"]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.20,<1"]
dev = [
  "mypy>=1.12,<2",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "pytest>=8,<9",
  "ruff>=0.7,<0.8",
]

[tool.setuptools.dynamic]
version = { attr = "databased.__version__" }

[tool.pytest.ini_options]
addopts = "--cov=databased --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
